use password reset method to OTP
